Fix issue on To Do section with left margin on mobile view

--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -32,6 +32,7 @@ p {
 
 
 /* Nav Bar  */
+
 .nav-item {
  font-family: "Poiret One", sans-serif;
   font-weight: 400;
@@ -65,13 +66,6 @@ p {
 
 /* Footer */
 
-/* To make sticky footer */
-.wrapper {
-  min-height: 100vh;
-  display: grid;
-  grid-template-rows: auto 1fr auto;
-}
-
 .social-icons {
   color: black;
 }
@@ -87,6 +81,13 @@ p {
 .designLed-copyright:hover {
   color: #dc9806 !important;
   text-decoration: none;
+}
+
+/* To make sticky footer */
+.wrapper {
+  min-height: 100vh;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
 }
 
 
@@ -150,10 +151,11 @@ p {
 
 .how-to {
   background-color: #580b20;
-  margin: 1.5em;
+  /* margin: 1.5em; */
+  margin-top: 1.5em;
   padding: 2em;
   color: white;
-  max-width: 98%;
+  max-width: 100%;
 }
 
 
